refactor: fixed console warnings and error

--- a/public/index.html
+++ b/public/index.html
@@ -15,24 +15,24 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
 
-  <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-  <link rel="stylesheet" href="css/animate.css">
+  <link type="text/css" href="css/open-iconic-bootstrap.min.css">
+  <link type="text/css" href="css/animate.css">
 
-  <link rel="stylesheet" href="css/owl.carousel.min.css">
-  <link rel="stylesheet" href="css/owl.theme.default.min.css">
-  <link rel="stylesheet" href="css/magnific-popup.css">
+  <link type="text/css" href="css/owl.carousel.min.css">
+  <link type="text/css" href="css/owl.theme.default.min.css">
+  <link type="text/css" href="css/magnific-popup.css">
 
-  <link rel="stylesheet" href="css/aos.css">
+  <link type="text/css" href="css/aos.css">
 
-  <link rel="stylesheet" href="css/ionicons.min.css">
+  <link type="text/css" href="css/ionicons.min.css">
 
-  <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-  <link rel="stylesheet" href="css/jquery.timepicker.css">
+  <link type="text/css" href="css/bootstrap-datepicker.css">
+  <link type="text/css" href="css/jquery.timepicker.css">
 
 
-  <link rel="stylesheet" href="css/flaticon.css">
-  <link rel="stylesheet" href="css/icomoon.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link type="text/css" href="css/flaticon.css">
+  <link type="text/css" href="css/icomoon.css">
+  <link type="text/css" href="css/style.css">
   <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
